terragrunt/k8s/services/catalog/rollout.yml
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: catalog
  namespace: mv100
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog
  strategy:
    canary:
      stableService: catalog
      canaryService: catalog-canary
      trafficRouting:
        istio:
          virtualService:
            name: api-vs
            routes:
              - catalog-route
      steps:
        - setWeight: 20
        - pause:
            duration: 30
        - setWeight: 50
        - pause:
            duration: 60
        - setWeight: 100
  template:
    metadata:
      labels:
        app: catalog
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3001"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: catalog
          image: devopsflow999/catalog:main-v0.1.2
          ports:
            - containerPort: 3001
