terragrunt/k8s/services/catalog/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: mv100
spec:
  selector:
    app: catalog
  ports:
    - port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-canary
  namespace: mv100
spec:
  selector:
    app: catalog
  ports:
    - port: 3001
      targetPort: 3001
